2006-01-9  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PrintControllerWithStatusDialog.cs: 
	Added PrintControllerWithStatusDialog.

2006-01-9  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* XplatUI.cs, Form.cs, XplatUIDriver.cs, XplatUIX11.cs, XplatUIOSX.cs, 
	XplatUIWin32.cs: Added support for Form TransparencyKey and Opacity on Windows.

2006-01-9  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* ComboBox.cs: Fix crash when there is no selected item (due to last commit)

2006-01-09  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* ComboBox.cs: Added KeyDown event handler for processing arrow keys
	and PgUp/PgDown. Also, scroll to selected item upon dropdown. Bugs 76857 and 76788.

2006-01-08  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs: Added internal class SVGUtil.

2006-01-08  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Don't crash if there are two files with the
	  same name but different locations.

2006-01-08  John BouAntoun  <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: Fixed annoying rendering bug when selecting
	dates across multiple month grids. Used to not highlight entire 
	month, but does now.
	
2006-01-06  Jackson Harper  <jackson@ximian.com>

	* MonthCalendar.cs: Removed DoEvents call to prevent a running
	message loop. Change timer intervals to numbers that seem more
	natural.

2006-01-06  John BouAntoun  <jba-mono@optusnet.com.au>

	* DateTimePicker.cs: Modified CalculateDropDownLocation to use the screen
	  object for location info since screen object is now implemented.

2006-01-05  Jackson Harper  <jackson@ximian.com>

	* AsyncMethodData.cs: Check if the call is complete before doing a WaitOne
	* AsyncMethodResult.cs: We no longer use a WeakReference for the
	AsyncMethodResult, this is because we ALWAYS want the
	ManualResetEvent to get set.
	* Control.cs: When disposing use an async invoke to call shutdown
	code, so that thigns don't block on the finalizer thread.  Also